[package]
name = "anyquake_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyquake_core = { path = "../core" }
clap = { version = "4.3.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
trauma = "2.2.3"
