[package]
name = "anyquake_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
anyquake_core = { path = "../core" }
clap = { version = "4.3.17", features = ["derive"] }
prettytable-rs = "0.10.0"
tokio = { version = "1", features = ["full"] }
