[package]
name = "anyquake_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
dirs = "5.0.1"
futures-util = "0.3.14"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
serde_json = "1.0.103"
tokio = "1.29.1"

